[package]
name = "zenoh-explorer"
version = "0.1.0"
edition = "2021"
description = "A native GUI application for exploring Zenoh networks"
license = "Apache-2.0"
authors = ["Zenoh Community"]
repository = "https://github.com/zenoh-project/zenoh-explorer"
keywords = ["zenoh", "network", "explorer", "gui", "client"]
categories = ["network-programming", "gui"]

[workspace]

[dependencies]
# Core Zenoh
zenoh = { version = "1.0", features = ["unstable"] }

# GUI Framework
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["glow"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

[[bin]]
name = "zenoh-explorer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true